--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "bootstrap": "^5.3.3",
     "firebase": "^10.13.1",
     "primevue": "^4.0.4",
-    "vue": "^3.4.29",
+    "vue": "^3.5.4",
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
-    "@vitejs/plugin-vue": "^5.0.5",
+    "@types/estree": "^1.0.5",
+    "@vitejs/plugin-vue": "^5.1.3",
     "@vue/eslint-config-prettier": "^9.0.0",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
