--- a/package.json
+++ b/package.json
@@ -1,38 +1,6 @@
 {
-  "name": "nomash-library",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "start": "node server.js",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
-  },
   "dependencies": {
-    "@primevue/themes": "^4.0.4",
-    "axios": "^1.7.7",
-    "bootstrap": "^5.3.3",
-    "cors": "^2.8.5",
-    "express": "^4.21.0",
-    "firebase": "^10.13.1",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1",
-    "npm": "^10.8.3",
-    "primevue": "^4.0.7",
-    "vue": "^3.4.29",
-    "vue-router": "^4.4.3"
-  },
-  "devDependencies": {
-    "@rushstack/eslint-patch": "^1.8.0",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "@vue/eslint-config-prettier": "^9.0.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.23.0",
-    "prettier": "^3.2.5",
-    "vite": "^5.3.1",
-    "vite-plugin-vue-devtools": "^7.3.1"
+    "firebase-functions": "^6.0.1"
   }
 }
